added Java 17 support for Kafka Axon Agent